src/test/ui/error-codes/E0109.stderr
error[E0109]: type arguments are not allowed for this type
  --> $DIR/E0109.rs:1:14
   |
LL | type X = u32<i32>;
   |              ^^^ type argument not allowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0109`.
